syntax = "proto3";
option go_package = "/pb";
package pb;
import "game.proto";
import "player.proto";
// kindID 2003
//入场
message BrcowcowSceneResp {
  int64 timeStamp = 1;        //时间戳
  repeated int32 chips = 2;      //筹码
  repeated bytes awardAreas = 3;    //开奖记录(路单)
  repeated int64 areaBets = 4;    //各下注区当前总下注额
  repeated int64 myBets = 5;      //我在各下注区的总下注额
  string inning = 6;               // 牌局号
  PlayerListInfo allPlayers = 7;  //玩家列表
  int64 hostID = 8;
}
//状态
// 服务端推送
//(空闲 - 喊庄)
message BrcowcowStateFreeResp {
  TimeInfo times = 1;
}
//(开始 - 定庄)
message BrcowcowStateStartResp {
  TimeInfo times = 1;
  int64 hostID = 2;
  string inning = 3;               // 牌局号
}
//(游戏中 - 下注)
message BrcowcowStatePlayingResp {
  TimeInfo times = 1;
}
//(开奖)
message BrcowcowStateOpenResp {
  TimeInfo times = 1;
  BrcowcowOpenResp openInfo = 2;
}
//(结束)
message BrcowcowStateOverResp {
  TimeInfo times = 1;
}
//下注
message BrcowcowBetReq {
  int32 betArea = 1;        //下注区域
  int64 betScore = 2;        //下注金额
}
//下注结果：广播
message BrcowcowBetResp {
  int64 userID = 1;
  int32 betArea = 2;        //下注区域
  int64 betScore = 3;        //下注金额
}
//开牌
message BrcowcowOpenResp {
  bytes awardArea = 1;    //各区域胜负：1胜，0负
  CardInfo bankerCard = 2;    //天
  CardInfo tianCard = 3;    //天
  CardInfo xuanCard = 4;    //玄
  CardInfo diCard = 5;    //地
  CardInfo huangCard = 6;  //黄
}
//结算
message BrcowcowOverResp{
  int64 myAcquire = 1;    //个人所得
  repeated int64 totalSettlement = 2;  //统计：庄家+各区域输赢钱数额结算
}
//----------------------------------------------------------------------------------
//抢庄
message BrcowcowHostReq {
  bool isWant = 1;  //true上庄 false取消上庄
}
message BrcowcowHostResp {
  int64 userID = 1;
  bool isWant = 2;  //true上庄 false取消上庄
}
//待上庄列表
message BrcowcowHostListReq {
}
message BrcowcowHostListResp {
  PlayerInfo curHost = 1;        //当前庄家
  repeated int64 waitlist = 2;    //待上庄列表
}
